# lidar_processing

./: .gitignore  CMakeLists.txt  README.md  package.xml
logic/: CMakeLists.txt
logic/include/lidar_spherical_data_container/: lidar_spherical_data_container.h
logic/include/stixel_cylindrical_data_container/: stixel_cylindrical_data_container.h
logic/src/lidar_spherical_data_container/: lidar_spherical_data_container.cpp
logic/src/stixel_cylindrical_data_container/: stixel_cylindrical_data_container.cpp
ros/include/data_convertor/: ibeo_points_convertor.h
ros/src/data_convertor/: ibeo_points_convertor.cpp
src/lidar_processing/: CMakeLists.txt  package.xml
src/lidar_processing/logic/: CMakeLists.txt
src/lidar_processing/logic/consistency_grid_map_updator/: CMakeLists.txt
src/lidar_processing/logic/consistency_grid_map_updator/include/consistency_grid_map_updator/: consistency_grid_map_updator.h
src/lidar_processing/logic/consistency_grid_map_updator/src/: consistency_grid_map_updator.cpp
src/lidar_processing/logic/grid_map/: CMakeLists.txt
src/lidar_processing/logic/grid_map/include/consistency_cell/: consistency_cell.h
src/lidar_processing/logic/grid_map/include/grid_map/: grid_map.h
src/lidar_processing/logic/grid_map/src/: consistency_cell.cpp  grid_map.cpp
src/lidar_processing/logic/include/stixel_cylindrical_data_container/: stixel_cylindrical_data_container.h
src/lidar_processing/logic/lidar_spherical_data_container/: CMakeLists.txt
src/lidar_processing/logic/lidar_spherical_data_container/include/lidar_spherical_data_container/: lidar_spherical_data_container.h
src/lidar_processing/logic/lidar_spherical_data_container/src/: lidar_spherical_data_container.cpp
src/lidar_processing/logic/lidar_stixel_data_container/: CMakeLists.txt
src/lidar_processing/logic/lidar_stixel_data_container/include/lidar_stixel_data_container/: lidar_stixel_data_container.h
src/lidar_processing/logic/lidar_stixel_data_container/src/: lidar_stixel_data_container.cpp
src/lidar_processing/logic/lidar_stixel_data_segmentation/: CMakeLists.txt
src/lidar_processing/logic/lidar_stixel_data_segmentation/include/lidar_stixel_data_segmentation/: lidar_stixel_data_segmentation.h
src/lidar_processing/logic/lidar_stixel_data_segmentation/src/: lidar_stixel_data_segmentation.cpp
src/lidar_processing/logic/src/stixel_cylindrical_data_container/: stixel_cylindrical_data_container.cpp
src/lidar_processing/ros/: CMakeLists.txt
src/lidar_processing/ros/data_convertor/: CMakeLists.txt
src/lidar_processing/ros/data_convertor/include/data_convertor/: ibeo_points_convertor.h
src/lidar_processing/ros/data_convertor/src/: ibeo_points_convertor.cpp
src/lidar_processing/ros/include/application/: ibeo_processor.h
src/lidar_processing/ros/include/data_convertor/: ibeo_points_convertor.h
src/lidar_processing/ros/ros_node/: CMakeLists.txt
src/lidar_processing/ros/ros_node/pointcloud_segmentation/: CMakeLists.txt
src/lidar_processing/ros/ros_node/pointcloud_segmentation/include/pointcloud_segmentation/: pointcloud_segmentation.h
src/lidar_processing/ros/ros_node/pointcloud_segmentation/src/: main.cpp  pointcloud_segmentation.cpp
src/lidar_processing/ros/src/application/: ibeo_processor.cpp  main.cpp
src/lidar_processing/ros/src/data_convertor/: ibeo_points_convertor.cpp
