<?xml version="1.0"?>
<package format="2">
  <name>lidar_processing</name>
  <version>1.0.0</version>
  <description>The lidar_processing package</description>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
